--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,10 @@
    <title>Document</title>
 </head>
 <body>
-   <h1>this is a index ejs file</h1>
+   <h1>Welcome</h1>
+
+   <a href="/login">Sign In</a>
 </body>
 </html>
+
+
