--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src="https://apis.google.com/js/platform.js" async defer></script>
    <meta name="google-signin-client_id" content="364345538969-9qabmktiq70ut8s39ni56firsca0fahe.apps.googleusercontent.com">
+   <link rel="stylesheet" type="text/css" href="css/style.css" /> 
    <title>Document</title>
 </head>
 <body>
