--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,47 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-</head>
-<body>
-   <h1>Welcome</h1>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
+    <title>Mail Box</title>
+ 
+  </head>
+  <style>
+     body{
+        background-color: #F8F0DF;
+        color: #DF0054;
+     }
 
-   <a href="/login">Sign In</a>
-</body>
+     .main{
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+         height: 100vh;
+     }
+     .heading {
+      font-family: 'Comforter Brush', cursive;
+      font-size: 10rem;
+     }
+  </style>
+  <body>
+     <div class="main">
+
+            
+      <div class="heading">
+         Welcome!!   
+      </div>
+
+      <a href="/login"><button type="button" class="btn btn-danger btn-lg">Sign In</button></a>
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      </div>
+
+   
+  </body>
 </html>
-
 
