--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,16 +30,14 @@
      }
   </style>
   <body>
-     <div class="main">
-
-            
+   <div class="main">      
       <div class="heading">
          Welcome!!   
       </div>
 
-      <a href="/login"><button type="button" class="btn btn-danger btn-lg">Sign In</button></a>
-         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-      </div>
+      <a href="/login"><button type="button" class="btn btn-danger btn-lg">Go to Login Page</button></a>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+   </div>
 
    
   </body>
