--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,12 +8,35 @@
 
     <title>Profile</title>
   </head>
+  <style>
+     body{
+      background-color: #F8F0DF;
+      color: #DF0054;
+   }
+  </style>
   <body>
-    
-    <a href="/logout">Sign Out</a>  
     <h1>Hi <%= user.name %></h1>
 
     <img src="<%= user.picture %>" alt="">
+
+    <a href="/logout">Sign Out</a>  
+
+    <h2>Send Mail</h2>
+
+
+  <form action="/submit" method="POST">
+      <label for="toEmail"> TO:</label>
+      <input type="text" name="toEmail" >
+
+      <label for="subject">Subject:</label>
+      <input type="text" name="subject">
+
+      <label for="text">Your Message:</label>
+      <textarea name="textmsg" cols="30" rows="10"></textarea>
+      
+      <button type="submit">Send</button>
+  </form>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
