added styles to profile page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,27 +8,11 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="../assets/index.css">
     <title>Mail Box</title>
  
   </head>
-  <style>
-     body{
-        background-color: #F8F0DF;
-        color: #DF0054;
-     }
-
-     .main{
-         display: flex;
-         flex-direction: column;
-         justify-content: center;
-         align-items: center;
-         height: 100vh;
-     }
-     .heading {
-      font-family: 'Comforter Brush', cursive;
-      font-size: 10rem;
-     }
-  </style>
+ 
   <body>
    <div class="main">      
       <div class="heading">
