--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,29 +9,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+   <link rel="stylesheet" href="../assets/login.css">
     <title>Login</title>
   </head>
-  <style>
-   body{
-      background-color: #F8F0DF;
-      color: #DF0054;
-   }
 
-   .main{
-       display: flex;
-       flex-direction: column;
-       justify-content: center;
-       align-items: center;
-       height: 100vh;
-   }
-
-   .heading {
-    font-family: 'Comforter Brush', cursive;
-    font-size: 7rem;
-    margin-bottom: 2rem;
-   }
-</style>
   <body>
    <div class="main">
       <div class="heading">Login</div>
