--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,38 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../assets/profile.css">
     <title>Profile</title>
   </head>
-  <style>
-     body{
-      background-color: #F8F0DF;
-      color: #DF0054;
-   }
-  </style>
+
   <body>
-    <h1>Hi <%= user.name %></h1>
+    <div class="p-main">
 
-    <img src="<%= user.picture %>" alt="">
+    <div class="p-head">
+      <h1>Hi, <%= user.name %></h1>
+    </div>
 
-    <a href="/logout">Sign Out</a>  
+    <div class="p-image">
+      <img src="<%= user.picture %>" alt="">
+    </div>
 
-    <h2>Send Mail</h2>
+
+    <div class="p-subhead">
+      <h2>Send Mail</h2>
+    </div>
 
 
   <form action="/submit" method="POST">
-      <label for="toEmail"> TO:</label>
-      <input type="text" name="toEmail" >
+      <label for="toEmail"> To:</label>
+      <input type="text" name="toEmail"  >
 
       <label for="subject">Subject:</label>
-      <input type="text" name="subject">
+      <input type="text" name="subject" >
 
       <label for="text">Your Message:</label>
       <textarea name="textmsg" cols="30" rows="10"></textarea>
       
-      <button type="submit">Send</button>
+      
+      <button type="submit" class="btn btn-outline-danger">Send</button>
   </form>
-
+  <div class="p-logout">
+    <a href="/logout"><button type="button" class="btn btn-danger btn-lg">Sign Out</button></a>
+  </div>
+  
+</div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
